--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=ut
 #账号，密码
 spring.datasource.username=root
 spring.datasource.password=jinjingbo
+#1！！！！！！！！！！！！！！！密码
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
@@ -27,3 +28,40 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 # logger
 #logging.level.com.nowcoder.community=debug
 #logging.file=d:/work/data/nowcoder/community.log
+
+#使用新浪邮箱发送有误
+## MailProperties
+#spring.mail.host=smtp.sina.com
+##spring.mail.port=456
+#spring.mail.username=jinjingbo11@sina.cn  #新浪邮箱
+#spring.mail.password=3a1324f37f14a63b #开启服务时的授权码
+##spring.mail.protocol=smtps
+##spring.mail.properties.mail.smtp.ssl.enable=true
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#
+## SSL Config
+#spring.mail.port=465
+#spring.mail.protocol=smtp
+#spring.mail.default-encoding=UTF-8
+#spring.mail.properties.mail.smtp.ssl.enable=true
+#spring.mail.properties.mail.smtp.socketFactory.port=465
+#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+
+#使用qq邮箱进行邮件发送，通过测试
+# 需要开启 smtp
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+# 发件人的邮箱
+spring.mail.username=2538369425@qq.com
+# qq 邮箱的第三方授权码 并非个人密码
+spring.mail.password=wvmwvrhzdpfueabc
+#开启ssl 否则 503 错误
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+# community
+community.path.domain=http://localhost:8080
+#上传的资源（图片头像。。）存放的位置
+community.path.upload= D:/nowcoder community/upload
+
