redis优化，以及个人页面的处理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,3 +65,10 @@ community.path.domain=http://localhost:8080
 #上传的资源（图片头像。。）存放的位置
 community.path.upload= D:/nowcoder community/upload
 
+#redis的配置，声明选择的库（0-15），地址和端口
+
+# RedisProperties
+spring.redis.database=11  
+spring.redis.host=localhost
+spring.redis.port=6379
+
