kafka，系统消息的处理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,3 +72,8 @@ spring.redis.database=11
 spring.redis.host=localhost
 spring.redis.port=6379
 
+# KafkaProperties,,,端点，消费者的分组id,是否自动提交，自动提交的频率
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=community-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
