--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,3 +77,8 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=community-consumer-group
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-commit-interval=3000
+
+# ElasticsearchProperties，集群的名字，声明节点ip地址
+# ElasticsearchProperties
+spring.data.elasticsearch.cluster-name=nowcoder
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
