权限管理，定时器线程处理，一级缓存优化高频访问性能。。。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,7 +68,7 @@ community.path.upload= D:/nowcoder community/upload
 #redis的配置，声明选择的库（0-15），地址和端口
 
 # RedisProperties
-spring.redis.database=11  
+spring.redis.database=11
 spring.redis.host=localhost
 spring.redis.port=6379
 
@@ -82,3 +82,45 @@ spring.kafka.consumer.auto-commit-interval=3000
 # ElasticsearchProperties
 spring.data.elasticsearch.cluster-name=nowcoder
 spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+
+# TaskExecutionProperties,JDK普通线程池
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+
+# TaskSchedulingProperties，定时线程池
+spring.task.scheduling.pool.size=5
+
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+# wk////WK安装的地方 图片放置的位置
+#wk.image.command=d:/work/wkhtmltopdf/bin/wkhtmltoimage
+wk.image.command=D:/JavaTools/wkhtmltopdf/bin/wkhtmltoimage
+#wk.image.storage=d:/work/data/wk-images
+wk.image.storage=D:/nowcoder community/data/wk-images
+
+# qiniu，，，七牛云的服务会过期，可以在这里更新空间的域名
+#身份密钥AK
+qiniu.key.access=8iC-eTMYNA2lzaR2yD0fV_46v3xZB9RJtWKNWV33
+#SK
+qiniu.key.secret=RsXKVNBDc_FDHwQn7MBnAiZ4fkWmvvOFTUBX15Ab
+#七牛云创建的空间空间
+qiniu.bucket.header.name=community-heardjjb
+#对应域名
+quniu.bucket.header.url=http://repfyxx66.hb-bkt.clouddn.com
+#
+qiniu.bucket.share.name=community-sharejjb
+qiniu.bucket.share.url=http://repfncwvu.hb-bkt.clouddn.com
+
+#本地缓存优化
+# caffeine,记录几个对象和过期时间
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
