项目测试，项目监控

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -124,3 +124,7 @@ qiniu.bucket.share.url=http://repfncwvu.hb-bkt.clouddn.com
 # caffeine,记录几个对象和过期时间
 caffeine.posts.max-size=15
 caffeine.posts.expire-seconds=180
+
+# actuator.ports监控路径
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=info,caches
